[tool.poetry]
name = "admin-site"
version = "0.0.0"
description = ""
authors = ["makeworld"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.1"
Flask-Login = "0.4.1"
Flask-WTF = "^0.14.2"
WTForms = "^2.2.1"
argon2-cffi = "^19.1.0"
pypandoc = "^1.4"
PyYAML = "^5.1.2"
gunicorn = "19.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
